@@ -1,3 +1,3 @@
-debian/tmp/usr/lib/pkgconfig/enlightenment.pc
-debian/tmp/usr/lib/pkgconfig/everything.pc
-debian/tmp/usr/include/enlightenment/
+usr/lib/*/pkgconfig/enlightenment.pc
+usr/lib/*/pkgconfig/everything.pc
+usr/include/enlightenment/
