@@ -1,13 +1,5 @@
 #!/usr/bin/make -f
 
-CPPFLAGS:=$(shell dpkg-buildflags --get CPPFLAGS)
-CFLAGS:=$(shell dpkg-buildflags --get CFLAGS)
-LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS)
-
-export CPPFLAGS
-export CFLAGS
-export LDFLAGS
-
 DEB_HOST_GNU_SYSTEM=$(shell dpkg-architecture -qDEB_HOST_GNU_SYSTEM)
 DEB_HOST_GNU_CPU=$(shell dpkg-architecture -qDEB_HOST_GNU_CPU)
 SVN_RELEASE=$(shell grep '^release=' configure | cut -d'=' -f2-)
@@ -33,8 +25,8 @@ override_dh_install:
 
 override_dh_fixperms:
 	dh_fixperms
-	chmod 4755 debian/e17/usr/lib/enlightenment/utils/enlightenment_sys
-	chmod 4755 debian/e17/usr/lib/enlightenment/modules/cpufreq/*/freqset
+	chmod 4755 debian/e17/usr/lib/*/enlightenment/utils/enlightenment_sys
+	chmod 4755 debian/e17/usr/lib/*/enlightenment/modules/cpufreq/*/freqset
 
 override_dh_clean:
 	dh_clean
